--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.6.4",
+		"prisma": "5.16.1",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.4",
@@ -37,6 +38,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@prisma/client": "5.16.1",
 		"clsx": "^2.1.1",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1"
