--- a/package.json
+++ b/package.json
@@ -38,8 +38,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lucia-auth/adapter-prisma": "^4.0.1",
 		"@prisma/client": "5.16.1",
+		"arctic": "^1.9.1",
 		"clsx": "^2.1.1",
+		"lucia": "^3.2.0",
+		"outmatch": "^1.0.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1"
 	}
