--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@iconify/svelte": "^4.0.2",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -41,6 +42,7 @@
 		"@lucia-auth/adapter-prisma": "^4.0.1",
 		"@prisma/client": "5.16.1",
 		"arctic": "^1.9.1",
+		"bits-ui": "^0.21.11",
 		"clsx": "^2.1.1",
 		"lucia": "^3.2.0",
 		"outmatch": "^1.0.0",
