--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
 	"dependencies": {
 		"@lucia-auth/adapter-prisma": "^4.0.1",
 		"@prisma/client": "5.16.1",
+		"@trpc/server": "^10.45.2",
 		"arctic": "^1.9.1",
 		"bits-ui": "^0.21.11",
 		"clsx": "^2.1.1",
 		"lucia": "^3.2.0",
 		"outmatch": "^1.0.0",
 		"tailwind-merge": "^2.3.0",
-		"tailwind-variants": "^0.2.1"
+		"tailwind-variants": "^0.2.1",
+		"trpc-sveltekit": "^3.6.2"
 	}
 }
