--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"outmatch": "^1.0.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
-		"trpc-sveltekit": "^3.6.2"
+		"trpc-sveltekit": "^3.6.2",
+		"zod": "^3.23.8"
 	}
 }
