--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"bits-ui": "^0.21.11",
 		"clsx": "^2.1.1",
 		"lucia": "^3.2.0",
+		"lucide-svelte": "^0.399.0",
 		"outmatch": "^1.0.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
