--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"prisma": "5.16.1",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-multiselect": "^10.3.0",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
