--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
 		"lucia": "^3.2.0",
 		"lucide-svelte": "^0.399.0",
 		"outmatch": "^1.0.0",
+		"pusher": "^5.2.0",
+		"pusher-js": "8.4.0-rc2",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
 		"trpc-sveltekit": "^3.6.2",
